Running with -XX:CMSOldPLABNumRefills=2147483648 causes EXCEPTION_INT_DIVIDE_BY_ZERO on Windows i586

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P2
    • 9
    • Affects Version/s: 9, 9-repo-jigsaw
    • Component/s: hotspot
    • None
    • gc
    • b103

      Running:
      java -XX:+UseConcMarkSweepGC -XX:CMSOldPLABNumRefills=2147483648 -version

      on the latest Jigsaw build causes a divide by zero exception at:

      00 170af320 70059c11 jvm!CFLS_LAB::compute_desired_plab_size+0x81 [c:\jprt\t\p1\012426.christian\s\hotspot\src\share\vm\gc\cms\compactiblefreelistspace.cpp @ 2650]
      01 170af32c 70058fa5 jvm!ParScanThreadStateSet::flush+0xb1 [c:\jprt\t\p1\012426.christian\s\hotspot\src\share\vm\gc\cms\parnewgeneration.cpp @ 466]
      02 170af580 6ff494cb jvm!ParNewGeneration::collect+0x4a5 [c:\jprt\t\p1\012426.christian\s\hotspot\src\share\vm\gc\cms\parnewgeneration.cpp @ 965]
      03 170af630 6ff49b00 jvm!GenCollectedHeap::collect_generation+0x1eb [c:\jprt\t\p1\012426.christian\s\hotspot\src\share\vm\gc\shared\gencollectedheap.cpp @ 392]
      04 170af770 6ff3930c jvm!GenCollectedHeap::do_collection+0x320 [c:\jprt\t\p1\012426.christian\s\hotspot\src\share\vm\gc\shared\gencollectedheap.cpp @ 483]
      05 170af7a8 6ff59e9b jvm!GenCollectorPolicy::satisfy_failed_allocation+0xdc [c:\jprt\t\p1\012426.christian\s\hotspot\src\share\vm\gc\shared\collectorpolicy.cpp @ 774]
      06 170af7d4 6fef3663 jvm!VM_GenCollectForAllocation::doit+0x3b [c:\jprt\t\p1\012426.christian\s\hotspot\src\share\vm\gc\shared\vmgcoperations.cpp @ 174]
      07 170af804 6fef15a0 jvm!VM_Operation::evaluate+0x73 [c:\jprt\t\p1\012426.christian\s\hotspot\src\share\vm\runtime\vm_operations.cpp @ 66]
      08 170af884 6fef1e75 jvm!VMThread::evaluate_operation+0xe0 [c:\jprt\t\p1\012426.christian\s\hotspot\src\share\vm\runtime\vmthread.cpp @ 360]
      09 170afa0c 6fef2444 jvm!VMThread::loop+0x3c5 [c:\jprt\t\p1\012426.christian\s\hotspot\src\share\vm\runtime\vmthread.cpp @ 482]
      0a 170afa38 6ff640c1 jvm!VMThread::run+0xb4 [c:\jprt\t\p1\012426.christian\s\hotspot\src\share\vm\runtime\vmthread.cpp @ 273]
      0b 170afd70 7215c01d jvm!java_start+0xd1 [c:\jprt\t\p1\012426.christian\s\hotspot\src\os\windows\vm\os_windows.cpp @ 443]
      0c 170afda8 7215c001 msvcr120!_callthreadstartex+0x1b [f:\dd\vctools\crt\crtw32\startup\threadex.c @ 376]
      0d 170afdb4 764f336a msvcr120!_threadstartex+0x7c [f:\dd\vctools\crt\crtw32\startup\threadex.c @ 354]

            Assignee:
            Joseph Provino (Inactive)
            Reporter:
            Christian Tornqvist
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: