8139768: Running with -XX:CMSOldPLABNumRefills=2147483648 causes EXCEPTION_INT_DIVIDE_BY_ZERO on Windows i586

Use double arithmetic to avoid integer overflow

Reviewed-by: jwilhelm, tbenson